--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
         <a href="/index.html">
           <img src="assets/images/vectors/logo.svg" alt="logo" />
         </a>
-
-        <!-- Nav Element -->
-        <nav>
+        <!--burger icon-->
+        <div class="burger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <!-- Nav Element for desktop-->
+        <nav class="desktop-menu">
           <ul class="nav-container">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About us</a></li>
@@ -25,6 +30,15 @@
         </nav>
       </div>
     </header>
+    <!-- nav element for mobile-->
+    <nav class="mobile-menu">
+      <ul class="mobile-menu-list">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About us</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#solution">Solutions</a></li>
+      </ul>
+    </nav>
     <main>
       <div class="main-container">
         <!-- Section 1 -->
